Version 4.0b2 (2013-04-xx)
	Fixed so the width setting applies to the editor panel in modern theme.
	Fixed bug where alignment of images wasn't working properly on Firefox.
	Fixed bug where IE 8 would throw error when inserting a table.
	Fixed bug where IE 8 wouldn't render the element path properly.
	Fixed bug where old IE versions would render a red focus border.
	Fixed bug where old IE versions would render a frameborder for iframes.
Version 4.0b1 (2013-04-11)
	Added new node.js based build process used uglify, amdlc, jake etc.
	Added new package.json to enable easy installation of dependent npm packages used for building.
	Added new link, image, charmap, anchor, code, hr plugins since these are now moved out of the theme.
	Rewrote all plugins and themes from scratch so they match the new UI framework.
	Replaced all events to use the more common <target>.on/off(<event>) methods instead of <target>.<event>.add/remove.
	Rewrote the TinyMCE core to use AMD style modules. Gets compiled to an inline library using amdlc.
	Rewrote all core logic to pass jshint rules. Each file has specific jshint rules.
	Removed all IE6 specific logic since 4.x will no longer support such an old browser.
	Reworked the file names and directory structure of the whole project to be more similar to other JS projects.
	Replaced tinymce.util.Cookie with tinymce.util.LocalStorage. Fallback to userData for IE 7 native localStorage for the rest.
	Replaced the old 3.x UI with a new modern UI framework.
	Removed "simple" theme and added new "modern" theme.
	Removed advhr, advimage, advlink, iespell, inlinepopups, xhtmlxtras and style plugins.
	Updated Sizzle to the latest version.