@@ -5,6 +5,7 @@ Version 4.0b2 (2013-04-xx)
 	Fixed bug where IE 8 wouldn't render the element path properly.
 	Fixed bug where old IE versions would render a red focus border.
 	Fixed bug where old IE versions would render a frameborder for iframes.
+	Fixed bug where WebKit wouldn't properly open the cell properties dialog on edge case selection.
 Version 4.0b1 (2013-04-11)
 	Added new node.js based build process used uglify, amdlc, jake etc.
 	Added new package.json to enable easy installation of dependent npm packages used for building.
